Blender Ambient Occlusion Node Render Error #57963

Closed
opened 2018-11-20 21:43:25 +01:00 by Rowan Cruse Howse · 8 comments

System Information
OS: Ubuntu 16.04
GPU: Nvidia GTX 1060 6GB
CPU: Intel I7-4790 3.60 GHz
RAM: 32GB DDR3

Blender Version
Broken: 2.79.6 b3ac3d13a2

Description
After connecting the new ambient occlusion node to geometry displacement, upon rendering with CUDA i get the error "CUDA error: illegal address in cuCtxSynchronize(), line 1817" when rendering with CPU it simply crashes. after rendering with GPU upon closing and reopening the file it crashes as soon as loaded.

Exact steps for others to reproduce the error
Load Blender
Go To Cycles
Add a Plane
Enter Material Nodes
Add a Displacement node
Ensure Displacement is set to geometry
Add ambient occlusion node
connect the nodes AO output to the Displacement nodes Height input
Connect Displacement node to the Displacement input of the Material Output node
Enter Rendered View with CPU or GPU
Error.blend

**System Information** OS: Ubuntu 16.04 GPU: Nvidia GTX 1060 6GB CPU: Intel I7-4790 3.60 GHz RAM: 32GB DDR3 **Blender Version** Broken: 2.79.6 b3ac3d13a2a **Description** After connecting the new ambient occlusion node to geometry displacement, upon rendering with CUDA i get the error "CUDA error: illegal address in cuCtxSynchronize(), line 1817" when rendering with CPU it simply crashes. after rendering with GPU upon closing and reopening the file it crashes as soon as loaded. **Exact steps for others to reproduce the error** Load Blender Go To Cycles Add a Plane Enter Material Nodes Add a Displacement node Ensure Displacement is set to geometry Add ambient occlusion node connect the nodes AO output to the Displacement nodes Height input Connect Displacement node to the Displacement input of the Material Output node Enter Rendered View with CPU or GPU [Error.blend](https://archive.blender.org/developer/F5656490/Error.blend)

Added subscriber: @Dragonpeak

Added subscriber: @Dragonpeak
Member

Added subscriber: @lichtwerk

Added subscriber: @lichtwerk
Member

Confirmed.
Does not happen in 2.8.

Running through a master Debug build next...

Confirmed. Does not happen in 2.8. Running through a master Debug build next...
Brecht Van Lommel was assigned by Philipp Oeser 2018-11-21 10:13:22 +01:00
Member

Added subscriber: @brecht

Added subscriber: @brecht
Member

Asserts

kernel_assert(index >= 0 && index < width);
where index is 198 and width is only 63

1   raise                                                                         0x7ffff1dd553f 
2   abort                                                                        0x7ffff1dbf895 
3   __assert_fail_base.cold.0                                    0x7ffff1dbf769 
4   __assert_fail                                                           0x7ffff1dcd9f6 
5   ccl::texture<unsigned int>::fetch                     kernel_compat_cpu.h 77   0x4a08b25      
6   ccl::sobol_dimension                                            kernel_random.h     47   0x4a08b25      
7   ccl::path_rng_1D                                                   kernel_random.h     78   0x4db403b      
8   ccl::path_rng_2D                                                   kernel_random.h     120  0x4db403b      
9   ccl::path_branched_rng_2D                                kernel_random.h     239  0x4db403b      
10  ccl::svm_ao                                                            svm_ao.h            46   0x4db403b      
11  ccl::svm_node_ao                                                 svm_ao.h            99   0x4db57f2      
12  ccl::svm_eval_nodes                                            svm.h               482  0x4dc2265      
13  ccl::shader_eval_displacement                          kernel_shader.h     1249 0x4de2904      
14  ccl::kernel_displace_evaluate                            kernel_bake.h       519  0x4eecd27      
15  ccl::kernel_cpu_avx2_shader                             kernel_cpu_impl.h   174  0x4eee121      
16  ccl::CPUDevice::thread_shader                        device_cpu.cpp      839  0x363d900 

@brecht: mind having a look?

Asserts `kernel_assert(index >= 0 && index < width);` where index is 198 and width is only 63 ``` 1 raise 0x7ffff1dd553f 2 abort 0x7ffff1dbf895 3 __assert_fail_base.cold.0 0x7ffff1dbf769 4 __assert_fail 0x7ffff1dcd9f6 5 ccl::texture<unsigned int>::fetch kernel_compat_cpu.h 77 0x4a08b25 6 ccl::sobol_dimension kernel_random.h 47 0x4a08b25 7 ccl::path_rng_1D kernel_random.h 78 0x4db403b 8 ccl::path_rng_2D kernel_random.h 120 0x4db403b 9 ccl::path_branched_rng_2D kernel_random.h 239 0x4db403b 10 ccl::svm_ao svm_ao.h 46 0x4db403b 11 ccl::svm_node_ao svm_ao.h 99 0x4db57f2 12 ccl::svm_eval_nodes svm.h 482 0x4dc2265 13 ccl::shader_eval_displacement kernel_shader.h 1249 0x4de2904 14 ccl::kernel_displace_evaluate kernel_bake.h 519 0x4eecd27 15 ccl::kernel_cpu_avx2_shader kernel_cpu_impl.h 174 0x4eee121 16 ccl::CPUDevice::thread_shader device_cpu.cpp 839 0x363d900 ``` @brecht: mind having a look?

This issue was referenced by blender/cycles@a9e4dfc1d6

This issue was referenced by blender/cycles@a9e4dfc1d60c308507d439d209d10dd58adedc58

This issue was referenced by cccc40db51

This issue was referenced by cccc40db51a0b73d396952be65ef351a7c68ed4f

Changed status from 'Open' to: 'Resolved'

Changed status from 'Open' to: 'Resolved'
Sign in to join this conversation.
No Label
Interest
Alembic
Interest
Animation & Rigging
Interest
Asset Browser
Interest
Asset Browser Project Overview
Interest
Audio
Interest
Automated Testing
Interest
Blender Asset Bundle
Interest
BlendFile
Interest
Collada
Interest
Compatibility
Interest
Compositing
Interest
Core
Interest
Cycles
Interest
Dependency Graph
Interest
Development Management
Interest
EEVEE
Interest
EEVEE & Viewport
Interest
Freestyle
Interest
Geometry Nodes
Interest
Grease Pencil
Interest
ID Management
Interest
Images & Movies
Interest
Import Export
Interest
Line Art
Interest
Masking
Interest
Metal
Interest
Modeling
Interest
Modifiers
Interest
Motion Tracking
Interest
Nodes & Physics
Interest
OpenGL
Interest
Overlay
Interest
Overrides
Interest
Performance
Interest
Physics
Interest
Pipeline, Assets & IO
Interest
Platforms, Builds & Tests
Interest
Python API
Interest
Render & Cycles
Interest
Render Pipeline
Interest
Sculpt, Paint & Texture
Interest
Text Editor
Interest
Translations
Interest
Triaging
Interest
Undo
Interest
USD
Interest
User Interface
Interest
UV Editing
Interest
VFX & Video
Interest
Video Sequencer
Interest
Virtual Reality
Interest
Vulkan
Interest
Wayland
Interest
Workbench
Interest: X11
Legacy
Blender 2.8 Project
Legacy
Milestone 1: Basic, Local Asset Browser
Legacy
OpenGL Error
Meta
Good First Issue
Meta
Papercut
Meta
Retrospective
Meta
Security
Module
Animation & Rigging
Module
Core
Module
Development Management
Module
EEVEE & Viewport
Module
Grease Pencil
Module
Modeling
Module
Nodes & Physics
Module
Pipeline, Assets & IO
Module
Platforms, Builds & Tests
Module
Python API
Module
Render & Cycles
Module
Sculpt, Paint & Texture
Module
Triaging
Module
User Interface
Module
VFX & Video
Platform
FreeBSD
Platform
Linux
Platform
macOS
Platform
Windows
Priority
High
Priority
Low
Priority
Normal
Priority
Unbreak Now!
Status
Archived
Status
Confirmed
Status
Duplicate
Status
Needs Info from Developers
Status
Needs Information from User
Status
Needs Triage
Status
Resolved
Type
Bug
Type
Design
Type
Known Issue
Type
Patch
Type
Report
Type
To Do
No Milestone
No project
No Assignees
4 Participants
Notifications
Due Date
The due date is invalid or out of range. Please use the format 'yyyy-mm-dd'.

No due date set.

Dependencies

No dependencies set.

Reference: blender/blender#57963
No description provided.