intern/cycles/kernel/svm/svm_ao.h
@@ -33,6 +33,11 @@ ccl_device_noinline float svm_ao(KernelGlobals *kg,
 		return 1.0f;
 	}
 
+	/* Can't raytrace from shaders like displacement, before BVH exists. */
+	if (kernel_data.bvh.bvh_layout == BVH_LAYOUT_NONE) {
+		return 1.0f;
+	}
+
 	if(flags & NODE_AO_INSIDE) {
 		N = -N;
 	}
